# static_main

./: CMakeLists.txt  main.cxx
